[package]
name = "TicTacToe-AI"
version = "0.1.0"
authors = ["runner"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "analyzer"
path = "src/lib.rs"

[[bin]]
name = "tictactoe_main"
path = "src/bin/main.rs"

[dependencies]
